--- a/codenode/.project
+++ b/codenode/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>codenode</name>
+	<name>CodeNode</name>
 	<comment></comment>
 	<projects>
 	</projects>
