--- a/codenode/pom.xml
+++ b/codenode/pom.xml
@@ -14,5 +14,10 @@
   		<artifactId>flatlaf</artifactId>
   		<version>3.4</version>
 	</dependency>
+	<dependency>
+    	<groupId>net.sourceforge.htmlcleaner</groupId>
+    	<artifactId>htmlcleaner</artifactId>
+    	<version>2.25</version>
+	</dependency>
   </dependencies>
 </project>
